--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <section>
                 <h2 class="text-xl font-semibold mb-3 text-white">1. Executive Summary / Streszczenie Wykonawcze</h2>
                 <blockquote class="border-l-4 border-blue-600 pl-4 py-2 italic text-gray-300">
-                    [cite_start]<p><strong>English:</strong> The 15% discount on branded products would reduce <strong>revenue by 3,389,222 PLN</strong> [cite: 90, 93] [cite_start](a 15.0% reduction from the 22.59M PLN baseline [cite: 93][cite_start]) while dramatically improving the competitive position from a 33.3% to 64.4% win rate [cite: 13, 67] [cite_start]across 423,900 competitor comparisons[cite: 13, 67]. [cite_start]The discount creates a powerful competitive positioning but requires <strong>volume growth of &gt;15%</strong> to maintain current revenue levels[cite: 139].</p>
+                    <p><strong>English:</strong> The 15% discount on branded products would reduce <strong>revenue by 3,389,222 PLN</strong> (a 15.0% reduction from the 22.59M PLN baseline) while dramatically improving the competitive position from a 33.3% to 64.4% win rate across 423,900 competitor comparisons. The discount creates a powerful competitive positioning but requires <strong>volume growth of &gt;15%</strong> to maintain current revenue levels.</p>
                     <br>
-                    [cite_start]<p><strong>Polski:</strong> 15% zniżka na produkty markowe zmniejszyłaby <strong>przychody o 3 389 222 PLN</strong> [cite: 91, 93] [cite_start](15% redukcja z 22,59M PLN bazowej [cite: 93][cite_start]) przy jednoczesnej dramatycznej poprawie pozycji konkurencyjnej z 33,3% do 64,4% wygranych porównań [cite: 13, 67] [cite_start]wśród 423 900 porównań konkurencyjnych[cite: 13, 67]. [cite_start]Zniżka tworzy silną pozycję konkurencyjną, ale wymaga <strong>wzrostu wolumenu &gt;15%</strong> dla utrzymania obecnych przychodów[cite: 139].</p>
+                    <p><strong>Polski:</strong> 15% zniżka na produkty markowe zmniejszyłaby <strong>przychody o 3 389 222 PLN</strong> (15% redukcja z 22,59M PLN bazowej) przy jednoczesnej dramatycznej poprawie pozycji konkurencyjnej z 33,3% do 64,4% wygranych porównań wśród 423 900 porównań konkurencyjnych. Zniżka tworzy silną pozycję konkurencyjną, ale wymaga <strong>wzrostu wolumenu &gt;15%</strong> dla utrzymania obecnych przychodów.</p>
                 </blockquote>
             </section>
 
@@ -92,27 +92,27 @@
                         <tbody class="divide-y divide-gray-700 text-sm">
                             <tr class="table-row-odd">
                                 <td class="px-4 py-2">Products Analyzed / Produkty przeanalizowane</td>
-                                [cite_start]<td class="px-4 py-2">54,082 [cite: 93]</td>
-                                [cite_start]<td class="px-4 py-2">54,082 [cite: 93]</td>
+                                <td class="px-4 py-2">54,082 </td>
+                                <td class="px-4 py-2">54,082 </td>
                                 <td class="px-4 py-2">—</td>
                             </tr>
                             <tr class="table-row-even">
                                 <td class="px-4 py-2">Total Revenue / Łączne przychody</td>
-                                [cite_start]<td class="px-4 py-2">22,594,815 PLN [cite: 93]</td>
-                                [cite_start]<td class="px-4 py-2">19,205,592 PLN [cite: 93]</td>
-                                [cite_start]<td class="px-4 py-2 negative-text">-3,389,222 PLN [cite: 93]</td>
+                                <td class="px-4 py-2">22,594,815 PLN </td>
+                                <td class="px-4 py-2">19,205,592 PLN </td>
+                                <td class="px-4 py-2 negative-text">-3,389,222 PLN </td>
                             </tr>
                             <tr class="table-row-odd">
                                 <td class="px-4 py-2">Average Price / Średnia cena</td>
-                                [cite_start]<td class="px-4 py-2">417.79 PLN [cite: 93]</td>
-                                [cite_start]<td class="px-4 py-2">355.12 PLN [cite: 93]</td>
-                                [cite_start]<td class="px-4 py-2 negative-text">-62.67 PLN [cite: 93]</td>
+                                <td class="px-4 py-2">417.79 PLN </td>
+                                <td class="px-4 py-2">355.12 PLN </td>
+                                <td class="px-4 py-2 negative-text">-62.67 PLN </td>
                             </tr>
                             <tr class="table-row-even">
                                 <td class="px-4 py-2">Revenue Reduction / Redukcja przychodów</td>
                                 <td class="px-4 py-2">—</td>
                                 <td class="px-4 py-2">—</td>
-                                [cite_start]<td class="px-4 py-2 negative-text">15.0% [cite: 93]</td>
+                                <td class="px-4 py-2 negative-text">15.0% </td>
                             </tr>
                         </tbody>
                     </table>
@@ -128,24 +128,24 @@
                         <tbody class="divide-y divide-gray-700 text-sm">
                             <tr class="table-row-odd">
                                 <td class="px-4 py-2 font-semibold">Your Current Average Price / Twoja Średnia Cena:</td>
-                                [cite_start]<td class="px-4 py-2">397.85 PLN [cite: 15, 21]</td>
+                                <td class="px-4 py-2">397.85 PLN </td>
                             </tr>
                             <tr class="table-row-even">
                                 <td class="px-4 py-2 font-semibold">Competitor Average Price / Średnia Konkurencji:</td>
-                                [cite_start]<td class="px-4 py-2">363.04 PLN [cite: 16, 22]</td>
+                                <td class="px-4 py-2">363.04 PLN </td>
                             </tr>
                             <tr class="table-row-odd">
                                 <td class="px-4 py-2 font-semibold">Your Discounted Average Price / Twoja Średnia po Zniżce:</td>
-                                [cite_start]<td class="px-4 py-2">338.17 PLN [cite: 17, 23]</td>
+                                <td class="px-4 py-2">338.17 PLN </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 
                 <p class="mt-4 italic text-gray-300">
-                    [cite_start]<strong>English:</strong> <strong>Strategic Insight:</strong> The 15% discount positions you <strong>6.8% below</strong> the average competitor pricing, transforming you from premium-priced to a <strong>market leader</strong>[cite: 18, 19].
+                    <strong>English:</strong> <strong>Strategic Insight:</strong> The 15% discount positions you <strong>6.8% below</strong> the average competitor pricing, transforming you from premium-priced to a <strong>market leader</strong>.
                     <br>
-                    [cite_start]<strong>Polski: Wgląd strategiczny:</strong> Zniżka pozycjonuje Cię 6,8% poniżej średniej ceny konkurencji, transformując z premium na lidera rynkowego[cite: 24, 25].
+                    <strong>Polski: Wgląd strategiczny:</strong> Zniżka pozycjonuje Cię 6,8% poniżej średniej ceny konkurencji, transformując z premium na lidera rynkowego.
                 </p>
 
                 <h3 class="text-lg font-medium mt-6 mb-2 text-gray-300">Competitive Wins / Wygrane Konkurencyjne</h3>
@@ -162,21 +162,21 @@
                         <tbody class="divide-y divide-gray-700 text-sm">
                             <tr class="table-row-odd">
                                 <td class="px-4 py-2">Competitor Comparisons / Porównania konkurencyjne</td>
-                                [cite_start]<td class="px-4 py-2">423,900 [cite: 13, 67]</td>
-                                [cite_start]<td class="px-4 py-2">423,900 [cite: 13, 67]</td>
+                                <td class="px-4 py-2">423,900 </td>
+                                <td class="px-4 py-2">423,900 </td>
                                 <td class="px-4 py-2">—</td>
                             </tr>
                             <tr class="table-row-even">
                                 <td class="px-4 py-2">Competitive Wins / Wygrane konkurencyjne</td>
-                                [cite_start]<td class="px-4 py-2">141,038 (33.3%) [cite: 13, 67]</td>
-                                [cite_start]<td class="px-4 py-2">272,889 (64.4%) [cite: 13, 67]</td>
-                                [cite_start]<td class="px-4 py-2 positive-text">+131,851 [cite: 13, 67]</td>
+                                <td class="px-4 py-2">141,038 (33.3%) </td>
+                                <td class="px-4 py-2">272,889 (64.4%) </td>
+                                <td class="px-4 py-2 positive-text">+131,851 </td>
                             </tr>
                             <tr class="table-row-odd">
                                 <td class="px-4 py-2">Win Rate Improvement / Poprawa wskaźnika wygranych</td>
                                 <td class="px-4 py-2">—</td>
                                 <td class="px-4 py-2">—</td>
-                                [cite_start]<td class="px-4 py-2 positive-text">+31.1% [cite: 13]</td>
+                                <td class="px-4 py-2 positive-text">+31.1% </td>
                             </tr>
                         </tbody>
                     </table>
@@ -209,7 +209,7 @@
                             <tr class="table-row-odd">
                                 <td class="px-4 py-2">3</td>
                                 <td class="px-4 py-2 font-semibold">Boss</td>
-                                [cite_start]<td class="px-4 py-2">122,783.3 [cite: 58]</td>
+                                <td class="px-4 py-2">122,783.3 </td>
                                 <td class="px-4 py-2">Explicit value shown in the original visualization.</td>
                             </tr>
                             <tr class="table-row-even">
@@ -233,24 +233,24 @@
                 <h2 class="text-xl font-semibold mb-3 text-white">4. Risk Assessment / Ocena Ryzyka</h2>
                 <h3 class="text-lg font-medium mb-2 negative-text">High Impact Considerations / Kluczowe Zagadnienia</h3>
                 <ul class="list-disc ml-6 space-y-2 text-gray-300">
-                    [cite_start]<li><strong>English:</strong> Margin Erosion: No cost data available - immediate profitability analysis is required[cite: 29, 161].</li>
-                    [cite_start]<li><strong>Polski:</strong> Erozja marży: Brak danych kosztowych - wymagana natychmiastowa analiza rentowności[cite: 32, 165].</li>
-                    [cite_start]<li><strong>English:</strong> Brand Positioning: The shift from premium to competitive pricing may negatively affect luxury brand perception[cite: 29, 162].</li>
-                    [cite_start]<li><strong>Polski:</strong> Pozycjonowanie marki: Przejście z premium na konkurencyjne ceny może wpłynąć na postrzeganie luksusowych marek[cite: 33, 166].</li>
-                    [cite_start]<li><strong>English:</strong> Customer Expectations: A temporary discount may create permanent price reduction expectations among customers[cite: 30, 163].</li>
-                    [cite_start]<li><strong>Polski:</strong> Oczekiwania klientów: Tymczasowa zniżka może stworzyć stałe oczekiwania obniżek cen[cite: 121, 167].</li>
+                    <li><strong>English:</strong> Margin Erosion: No cost data available - immediate profitability analysis is required.</li>
+                    <li><strong>Polski:</strong> Erozja marży: Brak danych kosztowych - wymagana natychmiastowa analiza rentowności.</li>
+                    <li><strong>English:</strong> Brand Positioning: The shift from premium to competitive pricing may negatively affect luxury brand perception.</li>
+                    <li><strong>Polski:</strong> Pozycjonowanie marki: Przejście z premium na konkurencyjne ceny może wpłynąć na postrzeganie luksusowych marek.</li>
+                    <li><strong>English:</strong> Customer Expectations: A temporary discount may create permanent price reduction expectations among customers.</li>
+                    <li><strong>Polski:</strong> Oczekiwania klientów: Tymczasowa zniżka może stworzyć stałe oczekiwania obniżek cen[.</li>
                 </ul>
             </section>
 
             <section>
                 <h2 class="text-xl font-semibold mb-3 text-white">5. Strategic Opportunities / Możliwości Strategiczne</h2>
                 <ul class="list-disc ml-6 space-y-2 text-gray-300">
-                    [cite_start]<li class="positive-text"><strong>English:</strong> Market Dominance: A 31.1% increase in competitive wins across premium brands[cite: 124, 170].</li>
-                    [cite_start]<li class="positive-text"><strong>Polski:</strong> Dominacja rynkowa: 31,1% wzrost wygranych konkurencyjnych wśród marek premium[cite: 128, 174].</li>
-                    [cite_start]<li class="positive-text"><strong>English:</strong> Customer Acquisition: Competitive pricing on brands like <strong>Guess, Tommy Hilfiger, and Boss</strong> opens new market segments[cite: 125, 171].</li>
-                    [cite_start]<li class="positive-text"><strong>Polski:</strong> Pozyskiwanie klientów: Konkurencyjne ceny Guess, Tommy Hilfiger, Boss otwierają nowe segmenty[cite: 128, 174].</li>
-                    [cite_start]<li class="positive-text"><strong>English:</strong> Volume Growth: A potential <strong>2x increase</strong> in competitive advantage could drive significant sales lift[cite: 126, 172].</li>
-                    [cite_start]<li class="positive-text"><strong>Polski:</strong> Wzrost wolumenu: Potencjalny 2x wzrost przewagi konkurencyjnej może znacząco zwiększyć sprzedaż[cite: 129, 175].</li>
+                    <li class="positive-text"><strong>English:</strong> Market Dominance: A 31.1% increase in competitive wins across premium brands.</li>
+                    <li class="positive-text"><strong>Polski:</strong> Dominacja rynkowa: 31,1% wzrost wygranych konkurencyjnych wśród marek premium.</li>
+                    <li class="positive-text"><strong>English:</strong> Customer Acquisition: Competitive pricing on brands like <strong>Guess, Tommy Hilfiger, and Boss</strong> opens new market segments.</li>
+                    <li class="positive-text"><strong>Polski:</strong> Pozyskiwanie klientów: Konkurencyjne ceny Guess, Tommy Hilfiger, Boss otwierają nowe segmenty.</li>
+                    <li class="positive-text"><strong>English:</strong> Volume Growth: A potential <strong>2x increase</strong> in competitive advantage could drive significant sales lift.</li>
+                    <li class="positive-text"><strong>Polski:</strong> Wzrost wolumenu: Potencjalny 2x wzrost przewagi konkurencyjnej może znacząco zwiększyć sprzedaż.</li>
                 </ul>
             </section>
 
@@ -258,21 +258,21 @@
                 <h2 class="text-xl font-semibold mb-3 text-white">6. Implementation Recommendations / Rekomendacje Wdrożenia</h2>
                 <h3 class="text-lg font-medium mb-2 text-gray-300">Immediate Actions / Działania Natychmiastowe</h3>
                 <ol class="list-decimal ml-6 space-y-2 text-gray-300">
-                    [cite_start]<li><strong>English:</strong> Cost Analysis (Critical): Obtain cost data for margin impact analysis <strong>before</strong> full implementation[cite: 132, 178].</li>
-                    [cite_start]<li><strong>Polski:</strong> Analiza kosztów (Krytyczne): Uzyskaj dane kosztowe przed wdrożeniem[cite: 136, 182].</li>
-                    [cite_start]<li><strong>English:</strong> A/B Testing: Test the strategy first on <strong>high-impact brands</strong> such as Guess and Tommy Hilfiger[cite: 133, 179].</li>
-                    [cite_start]<li><strong>Polski:</strong> Testy A/B: Testuj najpierw na markach wysokiego wpływu (Guess, Tommy Hilfiger)[cite: 137, 183].</li>
-                    [cite_start]<li><strong>English:</strong> Volume Modeling: Project the sales lift needed to offset the <strong>3.39M PLN revenue reduction</strong>[cite: 134, 180].</li>
-                    [cite_start]<li><strong>Polski:</strong> Modelowanie wolumenu: Prognozuj wzrost sprzedaży potrzebny do skompensowania redukcji 3,39M PLN[cite: 138, 184].</li>
+                    <li><strong>English:</strong> Cost Analysis (Critical): Obtain cost data for margin impact analysis <strong>before</strong> full implementation.</li>
+                    <li><strong>Polski:</strong> Analiza kosztów (Krytyczne): Uzyskaj dane kosztowe przed wdrożeniem.</li>
+                    <li><strong>English:</strong> A/B Testing: Test the strategy first on <strong>high-impact brands</strong> such as Guess and Tommy Hilfiger.</li>
+                    <li><strong>Polski:</strong> Testy A/B: Testuj najpierw na markach wysokiego wpływu (Guess, Tommy Hilfiger).</li>
+                    <li><strong>English:</strong> Volume Modeling: Project the sales lift needed to offset the <strong>3.39M PLN revenue reduction</strong>.</li>
+                    <li><strong>Polski:</strong> Modelowanie wolumenu: Prognozuj wzrost sprzedaży potrzebny do skompensowania redukcji 3,39M PLN.</li>
                 </ol>
             </section>
 
             <section class="mt-8 pt-4 border-t border-gray-700">
                 <h2 class="text-xl font-bold mb-3 text-white">Bottom Line / Podsumowanie</h2>
                 <p class="text-lg italic text-gray-300">
-                    [cite_start]<strong>English:</strong> The discount creates powerful competitive positioning but requires volume growth &gt;15% to maintain current revenue levels[cite: 139].
+                    <strong>English:</strong> The discount creates powerful competitive positioning but requires volume growth &gt;15% to maintain current revenue levels.
                     <br>
-                    [cite_start]<strong>Polski:</strong> Zniżka tworzy silną pozycję konkurencyjną, ale wymaga wzrostu wolumenu &gt;15% dla utrzymania obecnych przychodów[cite: 139].
+                    <strong>Polski:</strong> Zniżka tworzy silną pozycję konkurencyjną, ale wymaga wzrostu wolumenu &gt;15% dla utrzymania obecnych przychodów.
                 </p>
             </section>
 
